...
    var body: some View {
        TabView(selection: $navigationState.selectedTab) {
            HomeTab
                .tabItem {
                    TabItemContent(
                        systemImage: "house.fill",
                        title: "ホーム"
                    )
                }
                .tag(0)
            
            MeetingListTab
                .tabItem {
...
