...
    }
    
    public var body: some View {
        List {
            ContentView
        }
        .navigationTitle("会議一覧")
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button(action: {
                    onCreateMeeting?()
                }) {
                    Image(systemName: "plus")
                }
                .accessibilityIdentifier("addMeetingButton")
            }
        }
        .task {
            loadMeetingsTask = Task {
                await viewModel.loadMeetings()
            }
...
